[package]
name = "Meka Reputation "
version = "0.1.0"
authors = ["Meka Team<dev@bitportal.io>"]
edition = "2018"

[features]
default = ['std']
std = [
    'parity-codec/std',
    'support/std',
    'system/std',
]

[dependencies.parity-codec]
default-features = false
features = ['derive']
version = '3.5'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = 'cc1d67e973fd02c0c997b164ba516cf041bf21f1'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = 'cc1d67e973fd02c0c997b164ba516cf041bf21f1'

[dev-dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'cc1d67e973fd02c0c997b164ba516cf041bf21f1'

[dev-dependencies.runtime-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
rev = 'cc1d67e973fd02c0c997b164ba516cf041bf21f1'

[dev-dependencies.runtime-io]
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = 'cc1d67e973fd02c0c997b164ba516cf041bf21f1'
